--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,11 @@ body {
 }
 
 #app {
-  /* position: absolute;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; */
+  left: 0;
   overflow: hidden;
   background-color: #18032c;
 }
@@ -191,6 +191,9 @@ footer {
   #fanBtn {
     background: #ac1991;
     transform:none;
+  }
+  #app{
+    position: initial;
   }
   /* .landing-btn{
     position: initial;
