--- a/src/fans/fans.css
+++ b/src/fans/fans.css
@@ -3,7 +3,7 @@ button.signup-btn {
   border-radius: 8px;
   border: none;
   padding: 1.4vh 8vh;
-  width: 36.6vh;
+  width: 100%;
   color: #ffffff;
   margin: 0 auto;
   display: flex;
@@ -127,7 +127,7 @@ video {
   margin: 0 4px;
 }
 
-.email-phone .mb-2 input[type="tel"] {
+.email-phone .mb-3 input[type="tel"] {
   width: 26.6vh;
   border-radius: 0 8px 8px 0;
   padding: 7px 15px;
@@ -338,7 +338,7 @@ video {
 }
 .first-last-name input[type="text"],
 /* .email-phone .mb-3 input[type="phone"], */
-.email-phone .mb-2 input[type="email"] {
+.email-phone .mb-3 input[type="email"] {
   width: 36vh;
   border-radius: 8px;
   padding: 7px 15px;
@@ -383,7 +383,7 @@ footer.vegas-expo p {
   background: rgb(119, 117, 117);
   border-radius: 8px;
 }
-@media (max-width: 430px) {
+@media (max-width: 767px) {
   .button-sign {
     width: 15vh;
     font-size: 1.8vh;
@@ -426,25 +426,25 @@ footer.vegas-expo p {
     font-size: 16px;
     line-height: 24px;
   }
-  .first-last-name .mb-2 input[type="text"] {
+  .first-last-name .mb-3 input[type="text"] {
     justify-content: center;
-    width: 166px !important;
+    width: 100% !important;
   }
   .form-elements {
     width: auto;
   }
-  .email-phone .mb-2 input[type="email"],
+  .email-phone .mb-3 input[type="email"],
   .username-input input[type="text"] {
     width: 100%;
   }
   .country-code {
     width: auto;
   }
-  .email-phone .mb-2 input[type="tel"] {
+  .email-phone .mb-3 input[type="tel"] {
     width: 100%;
   }
   .form-banner {
-    padding: 0 14px;
+    padding: 0 16px;
   }
   .lastname-inp {
     margin-left: 1vh;
@@ -453,7 +453,7 @@ footer.vegas-expo p {
     margin-left: 0;
   }
   .header-cont {
-    margin-bottom: 10px;
+    margin-bottom: 6%;
   }
   label {
     font-size: 12px;
@@ -487,8 +487,8 @@ footer.vegas-expo p {
     flex-direction: column;
   }
   .terms-content p {
-    font-size: 1.8vh;
-    margin-bottom: -1.5vh;
+    font-size: 1.55vh;
+    margin-bottom: -1vh;
   }
   .modal-content.thankyou-banner {
     min-width: auto;
@@ -519,8 +519,16 @@ footer.vegas-expo p {
   .complete-btn {
     height: 4vh;
   }
-  .mb-2,
+  .mb-3,
   .lastname-inp {
     margin-bottom: 1vh;
   }
+
+  .emailDiv, .phone-inp{
+    width: 100%;
+  }
+  .first-last-name div{
+    width: 100%;
+  }
+
 }
