--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -117,6 +117,7 @@ video {
   border-right: 0;
   border-radius: 8px 0 0 8px;
   padding: 7px 11px;
+  padding-right: 4px;
   width: calc(100% - 24vh);
   background-color: #ffffff;
   align-items: center;
@@ -406,7 +407,7 @@ footer.vegas-expo p {
   }
   .next-icon img,
   .prev-icon img {
-      width: 50px;
+      width: 40px;
       height: 50px;
   }
   .vegas-expo p {
@@ -518,10 +519,10 @@ footer.vegas-expo p {
     padding-inline: 4rem;
   }
   .carousel-control-prev {
-    left: 15px;
+    left: 10%;
 }
   .carousel-control-next {
-    right: 15px;
+    right: 10%;
 }
   .carousel-indicators{
     bottom: 9vh;
