--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,14 @@ footer {
   }
   footer.vegas-expo {
     font-size: 2vh;
+    position: fixed !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    /* background-color: red; */
+    color: white !important;
+    text-align: center !important;
+    transform: none !important;
   }
 
   .btn-wrapper{
