--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -370,6 +370,9 @@ footer.vegas-expo p {
 #termsCondition {
   overflow: hidden;
 }
+#termsCondition * , #privacyModal * {
+  font-size: 97% !important;
+}
 #termsCondition .modal-content,
 #privacyModal .modal-content {
   overflow-y: scroll;
@@ -482,7 +485,7 @@ footer.vegas-expo p {
   }
   .modal-body {
     padding: 0;
-    margin: 0 0 0 88px !important;
+    margin: 0 0 0 6% !important;
   }
   .email-phone {
     flex-direction: column;
@@ -556,6 +559,8 @@ footer.vegas-expo p {
 .button-sign {
   width: 35%;
   font-size: 3.8vw;
+  font-weight: 100;
+
 }
 .creator {
   font-size: 5.2vw;
