--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -370,7 +370,8 @@ footer.vegas-expo p {
 #termsCondition {
   overflow: hidden;
 }
-#termsCondition * , #privacyModal * {
+#termsCondition *,
+#privacyModal * {
   font-size: 97% !important;
 }
 #termsCondition .modal-content,
@@ -410,8 +411,8 @@ footer.vegas-expo p {
   }
   .next-icon img,
   .prev-icon img {
-      width: 40px;
-      height: 50px;
+    width: 40px;
+    height: 50px;
   }
   .vegas-expo p {
     font-size: 13px;
@@ -463,7 +464,8 @@ footer.vegas-expo p {
     font-size: 12px;
   }
   .creator-head {
-    height: 9vh;
+    height: 56px;
+
     padding: 0 15px;
   }
   .header-cont h1 {
@@ -473,7 +475,7 @@ footer.vegas-expo p {
     padding: 8px 16px;
   }
   .carousel-indicators {
-    margin-bottom: 3rem  !important;
+    margin-bottom: 3rem !important;
   }
   .modal-dialog.modal-dialog-centered {
     min-width: auto;
@@ -515,19 +517,18 @@ footer.vegas-expo p {
   .carousel-control-next,
   .carousel-control-prev {
     top: unset;
-   bottom: 12vh;
-
+    bottom: 12vh;
   }
-  .carousel-indicators{
+  .carousel-indicators {
     padding-inline: 4rem;
   }
   .carousel-control-prev {
     left: 10%;
-}
+  }
   .carousel-control-next {
     right: 10%;
-}
-  .carousel-indicators{
+  }
+  .carousel-indicators {
     bottom: 9vh;
   }
   .carousel-inner {
@@ -540,30 +541,32 @@ footer.vegas-expo p {
   .lastname-inp {
     margin-bottom: 1vh;
   }
-  .phone-inp, .emailDiv{
+  .phone-inp,
+  .emailDiv {
     width: 100% !important
     ;
-  } 
-  .first-last-name div, button.signup-btn{
+  }
+  .first-last-name div,
+  button.signup-btn {
     width: 100%;
   }
 }
 
 @media (max-width: 450px) {
-  .email-phone .mb-3 input[type="email"], .username-input input[type="text"]{
+  .email-phone .mb-3 input[type="email"],
+  .username-input input[type="text"] {
     width: 100%;
   }
   .email-phone .mb-3 input[type="tel"] {
     width: 100%;
-}
-.button-sign {
-  width: 35%;
-  font-size: 3.8vw;
-  font-weight: 100;
-
-}
-.creator {
-  font-size: 5.2vw;
-  padding-left: 10px;
-}
+  }
+  .button-sign {
+    width: 35%;
+    font-size: 3.8vw;
+    font-weight: 100;
+  }
+  .creator {
+    font-size: 5.2vw;
+    padding-left: 10px;
+  }
 }
