--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -128,7 +128,7 @@ video {
   margin: 0 4px;
 }
 
-.email-phone .mb-3 input[type="tel"] {
+.email-phone .mb-2 input[type="tel"] {
   width: 26.6vh;
   border-radius: 0 8px 8px 0;
   padding: 7px 15px;
@@ -138,7 +138,7 @@ video {
   color: #f11e11;
   font-weight: 400;
   font-size: 12px;
-  display: none;
+  visibility: hidden;
 }
 .validation-message3 {
   color: #f11e11;
@@ -338,8 +338,8 @@ video {
   align-items: center;
 }
 .first-last-name input[type="text"],
-/* .email-phone .mb-3 input[type="phone"], */
-.email-phone .mb-3 input[type="email"] {
+/* .email-phone .mb-2 input[type="phone"], */
+.email-phone .mb-2 input[type="email"] {
   width: 36vh;
   border-radius: 8px;
   padding: 7px 15px;
@@ -431,21 +431,21 @@ footer.vegas-expo p {
     font-size: 16px;
     line-height: 24px;
   }
-  .first-last-name .mb-3 input[type="text"] {
+  .first-last-name .mb-2 input[type="text"] {
     justify-content: center;
     width: 100% !important;
   }
   .form-elements {
     width: auto;
   }
-  .email-phone .mb-3 input[type="email"],
+  .email-phone .mb-2 input[type="email"],
   .username-input input[type="text"] {
     width: 100%;
   }
   .country-code {
     width: auto;
   }
-  .email-phone .mb-3 input[type="tel"] {
+  .email-phone .mb-2 input[type="tel"] {
     width: 100%;
   }
   .form-banner {
@@ -537,7 +537,7 @@ footer.vegas-expo p {
   .complete-btn {
     height: 4vh;
   }
-  .mb-3,
+  .mb-2,
   .lastname-inp {
     margin-bottom: 1vh;
   }
@@ -550,14 +550,21 @@ footer.vegas-expo p {
   button.signup-btn {
     width: 100%;
   }
-}
-
-@media (max-width: 450px) {
-  .email-phone .mb-3 input[type="email"],
+  .email-phone .mb-2 input[type="email"],
   .username-input input[type="text"] {
     width: 100%;
   }
-  .email-phone .mb-3 input[type="tel"] {
+  .email-phone .mb-2 input[type="tel"] {
+    width: 100%;
+  }
+}
+
+@media (max-width: 450px) {
+  .email-phone .mb-2 input[type="email"],
+  .username-input input[type="text"] {
+    width: 100%;
+  }
+  .email-phone .mb-2 input[type="tel"] {
     width: 100%;
   }
   .button-sign {
