fix country code ui 2

--- a/src/creators/creators.css
+++ b/src/creators/creators.css
@@ -444,6 +444,7 @@ footer.vegas-expo p {
   }
   .country-code {
     width: auto;
+    padding: 7px 11px;
   }
   .email-phone .mb-2 input[type="tel"] {
     width: 100%;
