--- a/src/fans/fans.css
+++ b/src/fans/fans.css
@@ -445,6 +445,7 @@ footer.vegas-expo p {
   }
   .country-code {
     width: auto;
+    padding: 7px 11px;
   }
   .email-phone .mb-2 input[type="tel"] {
     width: 100%;
