--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,28 @@ button.signup-btn {
   justify-content: center;
   align-items: center;
 }
-
+@media (min-width: 768px) and (max-width: 1400px) {
+  .form-banner {
+    margin-top: 100px;
+  }
+  .form-banner {
+    margin-top: 100px;
+    height: 74vh;
+    overflow: scroll;
+  }
+  .email-phone .mb-2 input[type="tel"] {
+    width: 28vh;
+  }
+  .country-code {
+    padding: 7px 11px;
+  }
+  .form-elements::-webkit-scrollbar {
+    width: 0px;
+  }
+  button.signup-btn {
+    margin-bottom: 5rem;
+  }
+}
 .signup-btn img {
   padding-left: 10px;
 }
@@ -134,6 +155,15 @@ footer {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media (min-width: 2000px) {
+  .email-phone .mb-2 input[type="tel"] {
+    width: 31.3vh;
+  }
+  .country-code {
+    padding: 7px 11px;
   }
 }
 @media (max-width: 767px) {
