--- a/src/fans/fans.css
+++ b/src/fans/fans.css
@@ -397,16 +397,18 @@ footer.vegas-expo p {
   }
 }
 @media (min-width: 768px) and (max-width: 1400px) {
-  .form-banner {
-    margin-top: 100px;
-  }
   .email-phone .mb-2 input[type="tel"] {
-    width: 28vh;
+    width: 24vh;
   }
   .form-banner {
-    margin-top: 100px;
-    height: 74vh;
+    margin-top: 0 !important;
+    padding-top: 100px;
+    height: 100vh;
     overflow: scroll;
+  }
+  .form-elements {
+    overflow: scroll;
+    height: 100vh;
   }
   .country-code {
     padding: 7px 11px;
